--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
 # 大语言模型支持智谱AI，OpenAI，Ollama封装发本地api
 # 大语言模型的url地址
-LLM_BASE_URL = 
+LLM_BASE_URL = https://open.bigmodel.cn/api/paas/v4/
 # 大语言模型的api key
 LLM_API_KEY = 
 # 大语言模型的名称
-MODEL_NAME = 
-# yaml配置文件的选择，LOCAL指config/config-local.yaml
+MODEL_NAME = GLM-4-0520
+# yaml配置文件的选择，web指config/config-web.yaml
 PY_ENVIRONMENT = web
 # 图片生成模型api地址，目前只支持ZhipuAI
 IMAGE_GENERATE_API = 
