--- a/config/config-web.yaml
+++ b/config/config-web.yaml
@@ -10,15 +10,17 @@ Knowledge-base-path:
 model:
   graph-entity:
     # 知识图谱中检索实体时的搜索主键，即匹配这个键对应的值，一般为“名称”或"name"
-    search-key: '名称'
+    search-key: 名称
+  # 编码模型配置，仅在要使用知识库功能时需要配置
   embedding: 
-    # 知识库用于自然语言（文本）处理的modelscope模型路径
-    model-path: C:\Users\<name>\.cache\modelscope\hub\
-    # modelscope模型名称和版本，注意斜杠方向
+    # 知识库用于自然语言（文本）处理的modelscope模型路径，windows下默认安装路径如下
+    model-path: C:\Users\<your username>\.cache\modelscope\hub\
+    # modelscope模型名称和版本，可在modelscope官网查看，会自动下载，注意斜杠方向”/“
     model-name: iic/nlp_corom_sentence-embedding_chinese-base
     model-version: v1.1.0
     device: cpu
 
+# 知识图谱配置。仅在要使用知识图谱功能时需要配置
 database:
   neo4j:
     url: bolt://localhost:7687
