--- a/.env.example
+++ b/.env.example
@@ -1,21 +1,35 @@
-# 大语言模型支持智谱AI，OpenAI，Ollama封装发本地api
+# 大语言模型支持智谱AI，兼容OpenAI SDK的api和Ollama封装的本地api
 # 大语言模型的url地址
-LLM_BASE_URL = https://open.bigmodel.cn/api/paas/v4/
+LLM_BASE_URL = https://open.bigmodel.cn/api/paas/v4
+# LLM_BASE_URL = https://api.deepseek.com/v1
+# LLM_BASE_URL = https://dashscope.aliyuncs.com/compatible-mode/v1
+# LLM_BASE_URL = https://api.siliconflow.cn/v1
+# LLM_BASE_URL = https://ark.cn-beijing.volces.com/api/v3
+# LLM_BASE_URL = http://127.0.0.1:11434/v1
+
 # 大语言模型的api key
 LLM_API_KEY = 
 # 大语言模型的名称
-MODEL_NAME = GLM-4-0520
+MODEL_NAME = glm-4-flash
+# 可选 glm-4-flash, glm-4-plus, 
+# deepseek-chat, deepseek-reasoner, 
+# qwen-max, qwen2.5-7b-instruct-1m
+# doubao-1-5-pro-32k
+
 # yaml配置文件的选择，web指config/config-web.yaml
 PY_ENVIRONMENT = web
+
 # 图片生成模型api地址，目前只支持ZhipuAI
 IMAGE_GENERATE_API = 
 # 图片生成模型的名称
-IMAGE_GENERATE_MODEL = cogview-3
-# 多模态大模型api地址，目前只支持ZhipuAI
+IMAGE_GENERATE_MODEL = cogview-3-flash
+
+# 多模态（图片理解）大模型api地址，目前只支持ZhipuAI
 IMAGE_DESCRIBE_API = 
-# 多模态大模型的名称
-IMAGE_DESCRIBE_MODEL = glm-4v-plus
+# 多模态（图片理解）大模型的名称
+IMAGE_DESCRIBE_MODEL = glm-4v-flash
+
 # 视频生成模型api地址，目前只支持ZhipuAI
 VIDEO_GENERATE_API = 
 # 视频生成模型的名称
-VIDEO_GENERATE_MODEL = cogvideox
+VIDEO_GENERATE_MODEL = cogvideox-flash
