解决edge-tts库 403 bug

--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ torch==2.4.1
 simplejson==3.19.3
 sortedcontainers==2.4.0
 transformers==4.45.2
-edge-tts==6.1.12
+edge-tts>=7.0.0
 pyahocorasick==2.1.0
 py2neo==2021.2.4
 PyPDF2==3.0.1
