增加了登录，注册等功能，同时加入了SQL，Redis，JWT

--- a/config/config-web.yaml
+++ b/config/config-web.yaml
@@ -14,7 +14,7 @@ model:
   # 编码模型配置，仅在要使用知识库功能时需要配置
   embedding: 
     # 构建知识库时用于文本向量化的modelscope模型路径，windows下默认安装路径如下，设置为其他路径会重新下载到该路径
-    model-path: C:/Users/<your username>/.cache/modelscope/hub/
+    model-path: /home/shenhould/.cache/.cache/modelscope/hub/
     # modelscope模型名称和版本，可在modelscope官网查看，会自动下载，注意斜杠方向”/“
     model-name: iic/nlp_corom_sentence-embedding_chinese-base
     model-version: v1.1.0
@@ -27,7 +27,7 @@ database:
     database: neo4j
     username: neo4j
     # 注意数字用引号引起来
-    password: 
+    password: Neo4jPass123!
     # 定义你的数据库存在的节点标签和关系类型，用于检索
     node-label: ['一级科室', '二级科室', '其他',"检查手段","治疗方案","生产商","疾病","症状","药物","食物","食谱"]
     relationship-type: ['好评药物', '宜吃', '属于', '常用药物', '并发症','忌吃','所属科室','推荐食谱','治疗方法','生产药品','症状','诊断建议']
