--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
 httpx==0.27.2
 openai==1.51.0
 python-dotenv==1.0.1
-gradio==4.44.1
+gradio==5.45.0
 overrides==7.7.0
 zhipuai==2.1.5.20230904
 icecream==2.1.3
 python-pptx==1.0.2
 pymysql==1.1.1
 django==5.1.1
+PyJWT>=2.8,<2.9
 APScheduler==3.10.4
 python-docx==1.1.2
 langchain==0.3.3
@@ -32,3 +33,5 @@ faiss-cpu==1.9.0
 soundfile==0.12.1
 whisper==1.1.10
 openai-whisper==20240930
+redis==5.0.8
+passlib[bcrypt]
