更新了MySQL内容以及前后端接口

--- a/.env.example
+++ b/.env.example
@@ -44,8 +44,16 @@ DJANGO_SECRET_KEY = change-me
 DJANGO_DEBUG = false
 # 允许访问的主机名，逗号分隔
 DJANGO_ALLOWED_HOSTS = 127.0.0.1,localhost
-# 可选：自定义 SQLite 数据库文件路径
-# DJANGO_DB_PATH = authserver/db.sqlite3
+# MySQL 连接参数（默认使用远程库，可按需修改）
+DJANGO_DB_NAME = cyber_doctor
+DJANGO_DB_USER = root
+DJANGO_DB_PASSWORD = change-me
+DJANGO_DB_HOST = 114.215.183.142
+DJANGO_DB_PORT = 3306
+DJANGO_DB_CHARSET = utf8mb4
+DJANGO_DB_CONN_MAX_AGE = 60
+# 启动 app.py 前是否自动执行 migrate（true/false）
+AUTO_MIGRATE = true
 
 # JWT 配置
 JWT_SECRET_KEY = change-me-too
